added full swagger comments
