# pkg/api/handler/wallet.go
@@ -19,6 +19,16 @@ func NewWalletHandler(usecase interfaces.WalletUseCase) *WalletHandler {
 
 }
 
+// @Summary View user's wallet details
+// @Description Retrieve details of the wallet for the authenticated user
+// @Accept json
+// @Produce json
+// @Tags Wallet
+// @Security BearerTokenAuth
+// @Param id path int true "User ID"
+// @Success 200 {object} response.Response "Wallet details"
+// @Failure 400 {object} response.Response "Error in retrieving wallet details"
+// @Router /users/wallet [get]
 func (i *WalletHandler) ViewWallet(c *gin.Context) {
 	idString, _ := c.Get("id")
 	id, _ := idString.(int)
